# splitwise-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  RENDER_DEPLOYMENT.md  cursor-config.json  pyproject.toml  render.yaml  requirements.txt
splitwise_mcp/: __init__.py  fastmcp_server.py  fastmcp_sse_server.py
tests/: __init__.py  test_fastmcp_server.py
